# arduino-m0-pro-rust

./: Cargo.toml  README.md  memory.x  ocd.sh
.cargo/: config
examples/: blink.rs  ssd1306.rs
openocd/: arduino_zero.cfg
src/: lib.rs
