[package]
name = "arduino-m0-pro-rust"
version = "0.1.0"
authors = ["James Waples <jamwaffles@gmail.com>"]

[dependencies]
cortex-m = "0.5.6"
cortex-m-semihosting = "0.3.1"
panic-semihosting = "0.3.0"
cortex-m-rt = "0.5.3"
metro_m0 = { git = "https://github.com/wez/atsamd21-rs", rev = "cccbff253e90cdafb685f6edfb325f49b8f1fb27" }
ssd1306 = "0.2.0"
embedded-graphics = "0.4.0"

